# cess

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
docker/: Dockerfile.cpu  Dockerfile.gpu  requirements-cpu.txt  requirements-gpu.txt
src/: __init__.py  xpu.py
